--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
   "dependencies": {
+    "accepts": "^1.3.2",
+    "assert": "^1.3.0",
+    "co": "^4.6.0",
+    "composition": "^2.3.0",
+    "cookies": "^0.6.1",
     "csv": "^0.4.6",
+    "debug": "^2.2.0",
+    "delegates": "^1.0.0",
+    "koa-compose": "^2.4.0",
+    "koa-is-json": "^1.0.0",
     "noflux": "^2.2.4",
-    "retry": "^0.9.0"
+    "on-finished": "^2.3.0",
+    "only": "0.0.2",
+    "retry": "^0.9.0",
+    "statuses": "^1.2.1",
+    "stream": "0.0.2"
   }
 }
