--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "noflux": "^2.2.4",
     "on-finished": "^2.3.0",
     "only": "0.0.2",
+    "restify": "^4.1.1",
     "retry": "^0.9.0",
     "statuses": "^1.2.1",
     "stream": "0.0.2"
