--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "csv": "^0.4.6",
     "debug": "^2.2.0",
     "delegates": "^1.0.0",
+    "excel-export": "^0.5.1",
+    "express": "^4.14.0",
     "koa-compose": "^2.4.0",
     "koa-is-json": "^1.0.0",
+    "linebyline": "^1.3.0",
+    "map-stream": "0.0.6",
     "noflux": "^2.2.4",
     "on-finished": "^2.3.0",
     "only": "0.0.2",
+    "readline": "^1.3.0",
     "restify": "^4.1.1",
     "retry": "^0.9.0",
     "statuses": "^1.2.1",
-    "stream": "0.0.2"
+    "stream": "0.0.2",
+    "vinyl-fs": "^2.4.3"
   }
 }
