--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "statuses": "^1.2.1",
     "stream": "0.0.2",
     "tiny-cookie": "^0.5.5",
-    "vinyl-fs": "^2.4.3"
+    "vinyl-fs": "^2.4.3",
+    "yargs": "^5.0.0"
   }
 }
